2025-05-30T01:45:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15337347368 # 1007
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-30
* notice: last 14d: unq all: 16 39
* notice: prev accum: outdated-unq outdated-all / unq all: 4211 8924 / 4241 8964
* notice: next accum: outdated-unq outdated-all / unq all: 4212 8925 / 4241 8964
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-16] / []

2025-05-29T12:43:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15324100425 # 1006
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-29
* notice: last 14d: unq all: 16 40
* notice: prev accum: outdated-unq outdated-all / unq all: 4210 8922 / 4241 8964
* notice: next accum: outdated-unq outdated-all / unq all: 4211 8924 / 4241 8964
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-15] / []

2025-05-29T01:47:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15314391069 # 1005
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-29
* notice: last 14d: unq all: 16 41
* notice: prev accum: outdated-unq outdated-all / unq all: 4205 8915 / 4241 8964
* notice: next accum: outdated-unq outdated-all / unq all: 4210 8922 / 4241 8964
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2025-05-14] / [2025-05-15]

2025-05-28T01:47:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15289593034 # 1003