@@ -1,12 +1,7 @@
 {
-  "count": 39,
+  "count": 38,
   "uniques": 16,
   "clones": [
-    {
-      "timestamp": "2025-05-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-05-18T00:00:00Z",
       "count": 3,
